src/test/run-pass/box-in-tup.rs


fn main() { let tup(mutable @int) i = tup(mutable @10); i._0 = @11; }